deployment/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-sample-app
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
