deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-sample-app
  namespace: my-sample-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-sample-app
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: my-sample-app
    spec:
      containers:
      - name: my-sample-app
        image: ghcr.io/telewis/my-sample-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
        resources:
          requests: 
            memory: "50M"
            cpu: ".1"
          limits:
            memory: "50M"
            cpu: ".1"
---
apiVersion: v1
kind: Service
metadata:
  name: my-sample-app
  namespace: my-sample-app
spec:
  selector:
    app: my-sample-app
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sample-app
  namespace: my-sample-app
spec:
  rules:
  - host: my-sample-app.startrek.toddelewis.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-sample-app
            port: 
              number: 80
