deployment/tls-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-sample-app
  namespace: my-sample-app
spec:
  tls:
  - hosts:
      - my-sample-app.startrek.toddelewis.net
    secretName: my-sample-app-cert
  rules:
  - host: my-sample-app.startrek.toddelewis.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-sample-app
            port: 
              number: 80
